<resources>
    <string-array name="num_seats_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="app_name">RideSharerDriver</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_manage_trips">ManageTrips</string>
    <string name="title_activity_update_trip">UpdateTrip</string>
    <string name="title_activity_create_trip">CreateTrip</string>
    <string name="title_activity_cancel_trip">CancelTrip</string>
    <string name="title_activity_confirm_booking">ConfirmBooking</string>
    <string name="title_activity_complete_trip">CompleteTrip</string>
    <string name="title_activity_manage_car">ManageCar</string>
    <string name="title_activity_create_car">CreateCar</string>
    <string name="title_activity_update_car">UpdateCar</string>
    <string name="title_activity_remove_car">RemoveCar</string>
    <string name="title_activity_manage_profile">ManageProfile</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="title_activity_update_info">UpdateInfo</string>
    <string name="title_activity_remove_user">RemoveUser</string>
    <string name="title_activity_select_time">SelectTime</string>
    <string name="title_activity_select_date">SelectDate</string>
    <string name="title_activity_select_username">SelectUsername</string>
    <string name="title_activity_select_start_end">SelectStartEnd</string>
    <string name="title_activity_select_car_idnum_seats">SelectCarIDNumSeats</string>
    <string name="title_activity_select_route_prices">SelectRoutePrices</string>
    <string name="title_activity_create_final_trip">CreateFinalTrip</string>
    <string name="init_text">Neurobin Time Picker Example</string>
    <string name="init_text2">Neurobin Time Picker Example</string>
    <string name="pick_time">Pick Time</string>
    <string name="title_activity_update_trip_fields">UpdateTripFields</string>
    <string name="title_activity_finish_create_trip">FinishCreateTrip</string>

    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="numSeats">Number of seats</string>
    <string name="licensePlate">License plate (no space)</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_rate_passenger">RatePassenger</string>
    <string name="loadUser">Load Passengers</string>
</resources>
